# inspectro

./: .gitignore  CHANGES.md  LICENSE  README.md  Snakefile  _common.py  _eigdecomp.py  config.yaml  environment.yml  nextflow.config  params.yml  pyproject.toml
conf/: modules.config
config/: track_metadata.tsv
inspectro/: __init__.py  __main__.py
inspectro/utils/: __init__.py  eigdecomp.py
utils/: _clustering.py  _df2multivec.py  clustering.py  common.py  eigdecomp.py  plotting.py
